--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,14 @@ body{
     margin-right:10px;
 }
 
+#sign{
+    display:flex;
+    justify-content: flex-end;
+    font-size:30px;
+    font-family:orbitron;
+    margin: -20px 20px -20px 0px;
+}
+
 
 #calculator{
     background-color:black;
@@ -55,6 +63,10 @@ body{
     border-radius: 3px;
     padding:5px;
     
+}
+
+#result{
+    color:grey;
 }
 
 #calculus{
